--- a/style.css
+++ b/style.css
@@ -4,5 +4,17 @@
 }
 
 h1 {
-    color: white
+    color: white;
+}
+
+li {
+    color: white;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.finished {
+    text-decoration: line-through;
 }
